Fix project slider width on mobile

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -109,6 +109,10 @@
             }
 }
 @media (max-width: 767px) {
+    .project .images {
+        width: calc(100% + 40px);
+        margin-left: -20px;
+    }
     .project .swiper-slide {
         padding: 0;
     }
